--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,11 @@
 		}
 	},
 	"require": {
-		"friendsofphp/php-cs-fixer": "^3.2",
+		"friendsofphp/php-cs-fixer": "^3",
 		"phpstan/phpstan": "^1.8.2",
+		"phpunit/phpunit": "^9.6.1",
 		"typo3/cms-core": "^11.5.24",
-		"typo3/testing-framework": "^6.16.7",
-		"phpunit/phpunit": "^9.6.1"
+		"typo3/testing-framework": "^6.16.7"
 	},
 	"extra": {
 		"typo3/cms": {
