--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,12 @@
 		}
 	},
 	"require": {
+		"typo3/cms-core": "^11.5.24"
+	},
+	"require-dev": {
 		"friendsofphp/php-cs-fixer": "^3",
 		"phpstan/phpstan": "^1.8.2",
 		"phpunit/phpunit": "^9.6.1",
-		"typo3/cms-core": "^11.5.24",
 		"typo3/testing-framework": "^6.16.7"
 	},
 	"extra": {
