Add TYPO3 v12 support

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
 		}
 	},
 	"require": {
-		"typo3/cms-core": "^11.5.24"
+		"php" : "^8.2",
+		"typo3/cms-core": "^11.5.24 || ^12.4.16"
 	},
 	"require-dev": {
 		"friendsofphp/php-cs-fixer": "^3",
